fix: align text in contexte

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -220,6 +220,11 @@ section .row {
 
 section h2 {
   padding-bottom: 20px;
+  padding-top: 50px;
+}
+
+section .context-text {
+  padding-top: 20px;
 }
 
 /**
@@ -343,12 +348,11 @@ section h2 {
   width: auto;
   border-radius: 50%;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 #text-on-me {
   text-align: center;
-  padding-top: 20px;
 }
 
 /**
